--- a/bibliography.bib
+++ b/bibliography.bib
@@ -432,6 +432,106 @@
 	pmid = {27343135},
 }
 
+@misc{DoesGenderDifference,
+  title = {Does {{Gender Difference Influence Outcome}}? : {{Journal}} of {{Trauma}} and {{Acute Care Surgery}}},
+  howpublished = {https://journals.lww.com/jtrauma/Fulltext/2002/11000/Does\_Gender\_Difference\_Influence\_Outcome\_.13.aspx},
+  file = {C\:\\Users\\Victoria\\Zotero\\storage\\CTGG6SEJ\\Does_Gender_Difference_Influence_Outcome_.13.html}
+}
+
+@article{croce2002,
+  title = {Does Gender Difference Influence Outcome?},
+  author = {Croce, Martin A. and Fabian, Timothy C. and Malhotra, Ajai K. and Bee, Tiffany K. and Miller, Preston R.},
+  year = {2002},
+  month = nov,
+  journal = {The Journal of Trauma},
+  volume = {53},
+  number = {5},
+  pages = {889--894},
+  issn = {0022-5282},
+  doi = {10.1097/00005373-200211000-00013},
+  langid = {english},
+  pmid = {12435939},
+}
+
+@article{magnotti2008,
+  title = {Impact of Gender on Outcomes after Blunt Injury: A Definitive Analysis of More than 36,000 Trauma Patients},
+  shorttitle = {Impact of Gender on Outcomes after Blunt Injury},
+  author = {Magnotti, Louis J. and Fischer, Peter E. and Zarzaur, Ben L. and Fabian, Timothy C. and Croce, Martin A.},
+  year = {2008},
+  month = may,
+  journal = {Journal of the American College of Surgeons},
+  volume = {206},
+  number = {5},
+  pages = {984-991; discussion 991-992},
+  issn = {1879-1190},
+  doi = {10.1016/j.jamcollsurg.2007.12.038},
+  langid = {english},
+  pmid = {18471739},
+}
+
+@article{pape2019,
+  title = {Is There an Association between Female Gender and Outcome in Severe Trauma? {{A}} Multi-Center Analysis in the {{Netherlands}}},
+  shorttitle = {Is There an Association between Female Gender and Outcome in Severe Trauma?},
+  author = {Pape, M. and Giannak{\'o}poulos, G. F. and Zuidema, W. P. and {de Lange-Klerk}, E. S. M. and Toor, E. J. and Edwards, M. J. R. and Verhofstad, M. H. J. and Tromp, T. N. and {van Lieshout}, E. M. M. and Bloemers, F. W. and Geeraedts, L. M. G.},
+  year = {2019},
+  month = feb,
+  journal = {Scandinavian Journal of Trauma, Resuscitation and Emergency Medicine},
+  volume = {27},
+  number = {1},
+  pages = {16},
+  issn = {1757-7241},
+  doi = {10.1186/s13049-019-0589-3},
+  langid = {english},
+  pmcid = {PMC6373135},
+  pmid = {30760289},
+}
+
+@article{trentzsch2014,
+  title = {Female Sex Protects from Organ Failure and Sepsis after Major Trauma Haemorrhage},
+  author = {Trentzsch, H. and Nienaber, U. and Behnke, M. and Lefering, R. and Piltz, S.},
+  year = {2014},
+  month = oct,
+  journal = {Injury},
+  volume = {45 Suppl 3},
+  pages = {S20-28},
+  issn = {1879-0267},
+  doi = {10.1016/j.injury.2014.08.013},
+  langid = {english},
+  pmid = {25284229},
+}
+
+@article{radke2019,
+  title = {Recognizing {{Preventable Death}}: {{Is There}} a {{Role}} of {{Survival Prediction Algorithms}}?},
+  shorttitle = {Recognizing {{Preventable Death}}},
+  author = {Radke, Oliver C. and Heim, Catherine},
+  year = {2019},
+  month = mar,
+  journal = {Anesthesiology Clinics},
+  volume = {37},
+  number = {1},
+  pages = {1--11},
+  issn = {1932-2275},
+  doi = {10.1016/j.anclin.2018.09.001},
+  langid = {english},
+  pmid = {30711223},
+}
+
+@article{bardes2019,
+  title = {Old {{Age With}} a {{Traumatic Mechanism}} of {{Injury Should Be}} a {{Trauma Team Activation Criterion}}},
+  author = {Bardes, James M. and Benjamin, Elizabeth and Schellenberg, Morgan and Inaba, Kenji and Demetriades, Demetrios},
+  year = {2019},
+  month = aug,
+  journal = {The Journal of Emergency Medicine},
+  volume = {57},
+  number = {2},
+  pages = {151--155},
+  issn = {0736-4679},
+  doi = {10.1016/j.jemermed.2019.04.003},
+  langid = {english},
+  pmid = {31078345},
+}
+
+
 @online{blank,
   author          = {},
   title           = {},
